--- a/frontend/src/components/adminDashboard/tables/tables.css
+++ b/frontend/src/components/adminDashboard/tables/tables.css
@@ -19,3 +19,43 @@
   font-family: 'Abril Fatface', cursive;
   text-align:center;
 }
+
+/* ConfirmDeleteModal.css */
+
+.confirm-delete-modal-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  background-color: #fff;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  text-align: center;
+}
+
+.confirm-delete-modal-container h2 {
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.confirm-delete-modal-container p {
+  margin-bottom: 20px;
+  color: #666;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.confirm-button {
+  background-color: #28a745;
+  color: #fff;
+  margin-right: 10px;
+}
+
+.cancel-button {
+  background-color: #dc3545;
+  color: #fff;
+}
