--- a/frontend/src/components/adminDashboard/tables/tables.css
+++ b/frontend/src/components/adminDashboard/tables/tables.css
@@ -5,7 +5,7 @@
 }
 .mainTable {
   width: 80%;
-  height: 100%;
+  height: auto;
   box-shadow: 0px 0px 1rem #999;
   background-color: rgba(250, 235, 215, 0.658);
   margin-left: 10%;
