Added user update and detail correction

--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -183,7 +183,7 @@ li {
 .page-header {
     position: relative;
     display: block;
-    margin-top: 105px;
+    margin-top: 5rem;
     padding: 124px 0 129px;
     background-repeat: no-repeat;
     background-size: cover;
