--- a/frontend/src/components/user/userstyle.css
+++ b/frontend/src/components/user/userstyle.css
@@ -15,8 +15,8 @@
     float: none;
     margin: 0 auto;
     margin-left: 24%;
-    width: 50%;
-    height: 50%;
+    width: 13rem;
+    height: 13rem;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
