--- a/frontend/src/components/Donation/styles.css
+++ b/frontend/src/components/Donation/styles.css
@@ -1,4 +1,4 @@
-/* .container {
+.donationcontainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,24 +36,21 @@
 }
 .form-group {
   margin-bottom: 15px;
-} */
-/* 
-label {
+}
+
+.donation_label {
   display: block;
   font-weight: bold;
 }
 
-input[type="text"],
-input[type="number"],
-input[type="email"],
-input[type="tel"] {
+.donation_input{
   width: 100%;
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
 
-button {
+.donation_btn {
   background-color: #4caf50;
   color: white;
   padding: 10px 20px;
@@ -62,7 +59,7 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.donation_btn:hover {
   background-color: #45a049;
 }
 
@@ -76,4 +73,4 @@ button:hover {
   .donation-form form {
     width: 70%;
   }
-} */
+}
