--- a/frontend/src/components/Donation/styles.css
+++ b/frontend/src/components/Donation/styles.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  margin: 0;
+  padding-top: 5rem;
   background-image: url("https://cdn.photoroom.com/v1/assets-cached.jpg?path=backgrounds_v3/white/Photoroom_white_background_extremely_fine_texture_only_white_co_d4d69c25-6b87-414c-9d1b-83a4f5cbf52d.jpg");
   background-size: cover;
 }
