--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -89,12 +89,12 @@
     box-shadow: 0px 4px 6px rgba(255, 187, 0, 0.685);
   }
 
-  .nav-link {
+  .nav_transition {
     transition: color .7s ease;
     transition: transform 0.7s ease;
   }
 
-  .nav-link:hover {
+  .nav_transition:hover {
     color: #ff6d12;
     transform: scale(1.18);
   }
