--- a/frontend/src/components/CartContainer/CustomDropdownList/CustomDropdown.css
+++ b/frontend/src/components/CartContainer/CustomDropdownList/CustomDropdown.css
@@ -1,41 +1,30 @@
-:root {
-    --very-dark-color: #437fc7;
-    --dark-color: #6daffe;
-    --light-color: #edf6ff;
-    --very-light-color: #ffffff;
-    --option-light: #e2f0f9;
-    --option-dark: #286fb4;
+.cart-side-panel {
+    position: fixed;  /* Fixed position to always stay in the viewport */
+    right: 0;         /* Align to the right side of the viewport */
+    top: 0;           /* Align to the top of the viewport */
+    width: 300px;     /* Fixed width */
+    height: 100%;     /* Full height */
+    background-color: white; /* Background color */
+    box-shadow: -5px 0 15px rgba(0, 0, 0, 0.5); /* Shadow to create depth */
+    overflow-y: auto; /* Allows scrolling within the panel */
+    z-index: 1050;    /* Higher than most elements */
+    transform: translateX(100%); /* Start off-screen */
+    transition: transform 0.3s ease-in-out; /* Smooth transition for sliding in/out */
   }
   
-.CustomDropdown-Content{
-    position: absolute;
-    top:25%;
-    left: 3%;
+  .cart-side-panel.open {
+    transform: translateX(0); /* Moves into view when open */
+  }
+  
+  .cart-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
     padding: 10px;
-    background-color: #fff;
-    box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06);
-    font-weight: bold;
-    color: #333;
-    width: max-content;
-    max-height: 30vh;
-    user-select: none;
-    overflow-y: scroll;
-}
-
-.selectedDropdown{
-    z-index: 100;
-}
-.CustomDropdown-Content .CustomDropdown-item{
-    padding: 10px;
-    cursor: pointer;
-    transition: all 0.2s;
-}
-
-.CustomDropdown-Content .CustomDropdown-item:hover{
-    background: #f4f4f4;
-}
-
-.CustomDropdown-Content-Link{
-    text-decoration: none;
-    color: var(--dark-color);
-}
+  }
+  
+  .cart-footer {
+    text-align: center;
+    margin-top: 20px;
+  }
+  
