--- a/frontend/src/components/CartContainer/CustomDropdownList/CustomDropdown.css
+++ b/frontend/src/components/CartContainer/CustomDropdownList/CustomDropdown.css
@@ -1,14 +1,14 @@
-/* .cart-side-panel {
+.cart-side-panel {
   position: absolute;  
   right: 0;         
   top: 0;          
   width: 300px;     
-  height: 100%;     
+  height:fit-content;     
   background-color: white; 
   box-shadow: -5px 0 15px rgba(0, 0, 0, 0.5); 
   overflow-y: auto; 
   z-index: 1050;    
-  transform: translateX(100%); 
+  /* transform: translateX(100%);  */
   transition: transform 0.3s ease-in-out; 
 }
 
@@ -26,4 +26,4 @@
 .cart-footer {
   text-align: center;
   margin-top: 20px;
-} */
+}
