--- a/frontend/src/components/adminDashboard/AdminChat.css
+++ b/frontend/src/components/adminDashboard/AdminChat.css
@@ -16,6 +16,7 @@
 }
 
 .iamtwo {
+  display: flex;
   flex: 0 0 70%; /* Take 70% width and don't allow shrinking or growing */
   overflow-y: auto; /* Adding overflow-y for vertical scroll */
   height: 65vh; /* Limiting max height to prevent overflowing */
@@ -23,6 +24,7 @@
 
 .selected-user {
   color: rgb(2, 174, 33); /* Adjust text color as needed */
+  background-color: #90EE90;
   /* Add more styles as needed */
 }
 
